Fix spacing of lower cards and starter sections

--- a/src/views/ideas/ideas.scss
+++ b/src/views/ideas/ideas.scss
@@ -60,6 +60,14 @@ $base-bg: $ui-white;
     width: 100%;
 }
 
+.ideas-all-cards {
+    padding: 5rem 0 !important;
+}
+
+.ideas-starter {
+    padding: 5rem 0 !important;
+}
+
 .tips-getting-started {
     background-color: $ui-light-gray;
     padding-top: 2.5rem;
